// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders customer form 1`] = `
<CustomerForm
  propA="propA"
  propB="propB"
/>
`;

exports[`renders guest form 1`] = `
<GuestForm
  propA="propA"
  propB="propB"
/>
`;
